# MediaForge

./: .claudeignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SPEC.md  build_local.sh  config.py  dev.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
cloud_sync/: server.py
desktop/: api.py  api_helpers.py  app_state.py  build.spec  build_dmg.sh  dock_utils.py  loading.html  main.py  native_theme.py  run_console.bat  runtime_hook.py  setup.iss  sse_helpers.py
desktop/routers/: __init__.py  articles.py  auth.py  credits.py  dashboard.py  discovery.py  effects.py  images.py  logs.py  materials.py  pipeline.py  queue.py  settings.py  sync.py  user.py  wechat.py
desktop/static/: app.js  index.html  style.css
desktop/web/: .env.example  .prettierignore  AGENTS.md  DESIGN.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
docs/: ARTICLE_CHAT_REFINE_SPEC.md  FEATURE_SPEC.md  LINTER_PLAN.md  POINTS_SYSTEM_SPEC.md  RELEASE_CHECKLIST.md  SPEC.md  UI.md  USER_GUIDE.md  USER_SYSTEM_GUIDE.md
scripts/: generate_video_slides.py
services/: ai.py  cloud_sync.py  downloader.py  extensions.py  pipeline_agent.py  toutiao_login.py  user.py  watermark.py  watermark_remover.py  wechat.py  weibo.py  weibo_login.py  xhs_login.py
services/ai/: __init__.py  client.py  content.py  prompts.py  web_search.py
services/pipeline/: __init__.py  agent.py  config.py  constants.py  dedup.py  exceptions.py
services/wechat/: __init__.py  cover.py  editor.py  fetcher.py  helpers.py  publisher.py  upload.py
tests/: conftest.py  test_ai.py  test_config.py  test_downloader.py  test_extensions.py  test_main.py  test_watermark.py
tests/desktop/: test_api.py  test_app_state.py  test_main.py
tests/utils/: test_api_key_store.py  test_audit.py  test_file.py  test_logger.py  test_pathsafe.py  test_settings_store.py  (+1 more)
utils/: api_key_store.py  audit.py  device.py  env_manager.py  file.py  logger.py  pathsafe.py  settings_store.py  toutiao_auth_store.py  wechat_auth_store.py  weibo_auth_store.py  xhs_auth_store.py
(+216 files in other folders)
